
syntax="proto3";

option go_package = ".;lottery";

package slot;

message SpinReq{
  int32  gameCode=1;
  double amount=2;
  int64  uid=3;

}

message SpinRes{
  int64  orderNo=1;
  repeated  int32   openResult=2;
}


message CheckWonReq{
    int64 uid=1;
    int64 orderNo=2;
}
message CheckWonRes{
  int32 status=1;
  double profit=2;
}


service SlotService{
  rpc Spin(SpinReq) returns(SpinRes);
  rpc CheckWon(CheckWonReq) returns(CheckWonRes);
}